--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "OverAllTaskReport";
+    ViewBag.Title = "DetailedTaskReport";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 
@@ -11,7 +11,7 @@
 <script type="text/javascript" language="javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.26/build/vfs_fonts.js"></script>*@
 <script src="~/Asset/Jquery/jqGrid/plugins/pdfmake.min.js"></script>
 <script src="~/Asset/Jquery/jqGrid/plugins/vfs_fonts.js"></script>
-<a class="card-title">Over All Task Report</a>
+<a class="card-title">Detailed Task Report</a>
 <br />
 <script>
     //$.jgrid.defaults.width =1000;
