Changes_Temp Dashboard

--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -15,6 +15,11 @@
     .fit_Data {
         width: fit-content;
     }
+
+    .ui-jqgrid .ui-jqgrid-labels th.ui-th-column {
+    background-color: orange;
+    background-image: none
+}
 </style>
 
     <a class="card-title">Assessment Monitor</a>
@@ -33,7 +38,7 @@
         white-space: normal !important;
         height: auto !important;
         padding: 2px;
-        text-align:center;
+        text-align: center;
     }
 
     .ui-jqgrid .ui-jqgrid-view input, .ui-jqgrid .ui-jqgrid-view select, .ui-jqgrid .ui-jqgrid-view textarea, .ui-jqgrid .ui-jqgrid-view button {
@@ -67,6 +72,12 @@
     .app-container {
         min-height: 100%;
     }
+
+    .ui-jqgrid .ui-jqgrid-labels th.ui-th-column {
+    /*background-color: orange;
+    background-image: none*/
+    /*background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);*/
+}
 </style>
 <hr />
 <div class="row instanceRow" style="padding: 1em;">
