--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -83,6 +83,13 @@
             left: 0;
             margin-left: 0;
         }
+        .ui-jqgrid .ui-jqgrid-labels th.ui-th-column {
+    /*background-color: orange;
+    background-image: none*/
+    background-color:#00b2ed;
+
+   /*//background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);*/
+}
     </style>
     <style>
         /* ScrollBar */
@@ -176,7 +183,7 @@
                     
                     <div class="app-header-left">
                         <div class="logicon slideBefore">
-                            <img src="~/Asset/images/ProACCTool.png" style="width:250px;height:100px;" />
+                            <img src="~/Asset/images/ProACCTool.png" style="width:230px;height:80px;" />
                         </div>
                         <p style="font-family: -webkit-body;font-size: x-large;margin-left: 155px;font-weight: 600;color: #0e0e0e;">
                         Accelerator for S/4HANA Transformation</p>
@@ -650,14 +657,12 @@
                                             </a>
                                         </li>
 
-                                        @*<li>
+                                        <li>
                                             <a href="@Url.Action("AuditReport", "Report")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 Audit Report
                                             </a>
-                                        </li>*@
-
-
+                                        </li>
                                     </ul>
                                 </li>
 
