--- a/ProAcc/Views/Resource/ResourcePostConversion.cshtml
+++ b/ProAcc/Views/Resource/ResourcePostConversion.cshtml
@@ -404,7 +404,7 @@
             // height: 'auto',
             height: 400,
             rowNum: 1000,
-            caption: 'Resource Allocation',
+            caption: '',
             sortable: false,
             grouping: false,
             pager: "#jqGridPager",
