--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -477,7 +477,7 @@
                                     @if (User.IsInRole("Consultant") || User.IsInRole("Project Manager") || User.IsInRole("Customer"))
                                     {
                                         <a href="#">
-                                            <i class="metismenu-icon fa fa-ils"></i>
+                                            <i class="metismenu-icon fas fa-globe"></i>
                                             Conversion
                                             <i class="metismenu-state-icon fa fa-caret-down caret-left"></i>
                                         </a>
